# bojai

./: .dockerignore  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  inspect_model.py  pyproject.toml  requirements.txt
bojai/: cli.py
bojai/UserssoghmOneDriveDesktop/test1/: model.py
bojai/UserssoghmOneDriveDesktoppipelines/test1/: dataFormater.py  processor.py  user.py
bojai/cli/: dataFormater.py  global_vars.py  processor.py  trainer.py  user.py
bojai/cln/: dataFormater.py  processor.py
bojai/cln-ml/: dataFormater.py  global_vars.py  trainer.py
bojai/clt/: model.py
bojai/gegt/: dataFormater.py  global_vars.py  user.py
bojai/get/: dataFormater.py
bojai/mock_model/: dataFormater.py  model.py  processor.py  trainer.py  user.py
bojai/model/: deploy.py  deployUI.py  initialiseUI.py  prepare.py  prepareUI.py  train.py  trainUI.py
bojai/modelUI/: deployUI.py  train.py
eval_dir/: data.json  input.txt  output.txt  test.csv  test.json
src/bojai/: cli.py
src/bojai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bojai/deploy/: DEPLOY.md  __main__.py  cli.py  logging_utils.py  model_loader.py  models.py  server.py  user.py
src/bojai/mock_pipeline/: custom_data_processor.py  custom_pipeline_user.py  custom_trainer.py  dataFormater.py  global_vars.py  model.py  processor.py  trainer.py  user.py
src/bojai/pipelineCLI/: agent.py  deployCLI.py  initialiseCLI.py  prepare.py  prepareCLI.py  train.py  trainCLI.py  trainer.py  user.py
src/bojai/pipelineUI/: deploy.py  deployUI.py  initialiseUI.py  prepare.py  processor.py  train.py  trainUI.py  trainer.py  visualizer.py
test/: model.py  trainer.py
train_dir/: output.txt
(+97 files in other folders)
