[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bojai"
version = "0.1.0"
description = "BojAi – Modular ML for everyone"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["transformers"]

[project.scripts]
bojai = "bojai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]