[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vexor"
version = "0.1.0"
description = "Vexor – Modular ML for everyone"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["transformers"]

[project.scripts]
bojai = "bojai.cli:main"

[tool.setuptools]
package-dir = {"" = "bojai"}

[tool.setuptools.packages.find]
where = ["bojai"]
